[package]
name = "datalab"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
description = "Highly-optimized, streaming-capable data structures for Rust (trees, tensors, and more)."
repository = "https://github.com/dylan-lebreton/datalab"
readme = "README.md"
keywords = ["data-structures", "streaming", "out-of-core", "tensor", "tree"]
categories = ["data-structures", "science"]

[dependencies]

# Dev-only: benchmark harness. Library users do not inherit this.
[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "tensor"
harness = false

# Optimizations applied in `--release` (build, test --release, bench).
[profile.release]
lto = "fat"          # link-time optimization across all crates
codegen-units = 1    # slower compile, better optimization
